# memory-guard-kernel

./: CMakeLists.txt  LICENSE  README.md
src/: EntryPoint.c  EntryPoint.h  stdafx.c  stdafx.h
src/DeviceDispatch/: DeviceDispatch.c  DeviceDispatch.h
src/IoManagement/: IoManagement.c  IoManagement.h
src/KernelCallbacks/: KernelCallbacks.c  KernelCallbacks.h
src/resources/: MemoryGuardKernel.rc  resource.h
